2005-09-21  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* src/locale_impl.cpp: some internal functions used before declared.
	Thanks Thomas Kho for report.

2005-09-20  Francois Dumont  <dums@stlport...>

	* stlport/stl/_string.h, _string_workaround.h: code refactoring, substr method
	now use string constructor taking same parameters rather than the range
	constructor, thanks Felix Wyss report. Also add missing allocator parameter
	for non stateless allocators.

	* build/Makefiles/gmake: Restore resource build for Cygwin and MinGW, add
	it for Windows.

	* build/lib/configure.bat: Add --extra-cxxflag to inject additional compilation
	option in the nmake build system.

2005-09-20  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* test/unit/ptrspec_test.cpp: gcc 2.95 fail to roll out template instantiation
	for pointers to member function, skip this test for gcc 2.95.

	* build/Makefiles/gmake/gcc.mak: gcc 2.95 has no -fuse-cxa-atexit option.

	* build/lib/gcc.mak: don't use LEAK_PEDANTIC with gcc 2.95 [but this not help,
	segfault at program termination still happens].
	
	* stlport/config/stl_gcc.h: gcc 2.95 has problem with llabs, so force to use
	_STLP_NO_VENDOR_STDLIB_L; 2.95 fails to initialize builtin types.

	* stlport/stl/_cmath.h: workaround for gcc 2.95---it has problem with 'using'
	directive [problem with 'abs' with float types as argument].

	* stlport/stl/type_traits.h: workaround for gcc 2.95 [parentheses around
	template argument]. Thanks Thomas Kho.

	* test/unit/fstream_test.cpp: custom facet test compilation fail for gcc 2.95

	* build/Makefiles/gmake/icc.mak, build/test/unit/icc.mak: support icc 9.0,
	thanks John Fisher-Ogden and Thomas Kho.

	* src/c_locale_glibc/c_locale_glibc2.c: use newlocale/freelocale for
	glibc 2.3.x, and __newlocale/__freelocale for glibc 2.2.x. Thanks Gail Baker.

2005-09-19  Francois Dumont  <dums@stlport...>

	* build/Makefiles/nmake/clean.mak, lib/clean.mak, app/clean.mak: Add check