@@ -1,3 +1,8 @@
+2005-09-21  Francois Dumont  <dums@stlport...>
+
+	* src/locale.cpp, facets_byname.cpp: Use of _STLP_ATOMIC_INCREMENT rather than
+	a lock on a mutex when the macro is available.
+
 2005-09-21  Petr Ovtchenkov  <complement@users.sourceforge.net>
 
 	* src/locale_impl.cpp: some internal functions used before declared.
